<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/_cv_dados_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/_client_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_dados_do_cliente"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/santral_bold"
                    android:textColor="@color/black"/>

                <View
                    android:id="@+id/_client_information_divisor"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/_client_information" />

                <TextView
                    android:id="@+id/codigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/_client_information"
                    app:layout_constraintTop_toBottomOf="@id/_client_information_divisor"
                    tools:text="@sample/clientes.json/cliente/codigo"
                    android:textAllCaps="true"
                    android:fontFamily="@font/santral_bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/razao_social"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/codigo"
                    app:layout_constraintTop_toBottomOf="@id/_client_information_divisor"
                    tools:text="@sample/clientes.json/cliente/razao_social"
                    android:textAllCaps="true"
                    android:fontFamily="@font/santral_bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/nome_fantasia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/_client_information"
                    app:layout_constraintTop_toBottomOf="@id/codigo"
                    tools:text="@sample/clientes.json/cliente/nomeFantasia"
                    android:textAllCaps="true"
                    android:fontFamily="@font/santral_bold"
                    android:textColor="@color/razao_social"/>

                <TextView
                    android:id="@+id/_cnpj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_cnpj"
                    app:layout_constraintStart_toStartOf="@id/_client_information"
                    app:layout_constraintTop_toBottomOf="@id/nome_fantasia"
                    android:fontFamily="@font/santral_medium"
                    android:textColor="@color/text_labels"/>

                <TextView
                    android:id="@+id/cnpj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/_cnpj"
                    app:layout_constraintTop_toTopOf="@id/_cnpj"
                    tools:text="@sample/clientes.json/cliente/cnpj"
                    android:fontFamily="@font/santral_medium"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/_ramo_atividade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ramo_de_atividade"
                    android:fontFamily="@font/santral_book"
                    android:textColor="@color/text_labels"
                    app:layout_constraintStart_toStartOf="@id/_client_information"
                    app:layout_constraintTop_toBottomOf="@id/_cnpj" />

                <TextView
                    android:id="@+id/ramo_atividade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/_ramo_atividade"
                    app:layout_constraintTop_toTopOf="@id/_ramo_atividade"
                    tools:text="@sample/clientes.json/cliente/ramo_atividade"
                    android:fontFamily="@font/santral_medium"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/_enderecos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_enderecos"
                    android:fontFamily="@font/santral_book"
                    android:textColor="@color/text_labels"
                    app:layout_constraintStart_toStartOf="@id/_client_information"
                    app:layout_constraintTop_toBottomOf="@id/_ramo_atividade" />

                <TextView
                    android:id="@+id/enderecos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/_enderecos"
                    app:layout_constraintTop_toTopOf="@id/_enderecos"
                    tools:text="@sample/clientes.json/cliente/endereco"
                    android:fontFamily="@font/santral_medium"
                    android:textColor="@color/black"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_contatos_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="@id/_cv_dados_cliente"
            app:layout_constraintStart_toStartOf="@id/_cv_dados_cliente"
            app:layout_constraintTop_toBottomOf="@id/_cv_dados_cliente">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/_contatos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_contatos"
                    android:fontFamily="@font/santral_bold"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/_contatos_divisor"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/_contatos" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_contatos_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/_contatos"
                    app:layout_constraintTop_toBottomOf="@id/_contatos_divisor"
                    tools:itemCount="1"
                    tools:listitem="@layout/contatos_cliente_item" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btn_verificar_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/green"
            android:text="@string/label_botao_verificar"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/cv_contatos_cliente"
            app:layout_constraintStart_toStartOf="@id/cv_contatos_cliente"
            app:layout_constraintTop_toBottomOf="@id/cv_contatos_cliente" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_bottom_nav"
            app:itemIconTint="@color/tab_bottom_nav"
            app:itemTextColor="@color/tab_bottom_nav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_navigation_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>